force-app/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Break_Current_Locks__c.field-meta.xml
<CustomField>
    <fullName>pse__Break_Current_Locks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When a project is locked for editing, this setting determines whether users (who have permission to edit tasks on the Project Task Gantt) are given the option to break the lock and force the other user into read-only mode.</inlineHelpText>
    <label>Always Allow Breaking Locks</label>
    <type>Checkbox</type>
</CustomField>