force-app/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Columns_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>pse__Columns_Field_Set__c</fullName>
    <defaultValue>&quot;Gantt_Columns&quot;</defaultValue>
    <inlineHelpText>Defines the API name of the field set, on the project task object, that contains the custom columns to show on Project Task Gantt. References the Gantt Custom Columns field set by default. Leave blank to disable.</inlineHelpText>
    <label>Columns Field Set</label>
    <length>90</length>
    <type>Text</type>
</CustomField>