force-app/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Show_Generate_RRs__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Generate_RRs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the Create Resource Demand button is shown on the Project Task Gantt toolbar. Use to staff the project plan through the Create Resource Demand button from Project Task Assignments page.</inlineHelpText>
    <label>Show &quot;Create Resource Demand&quot; button</label>
    <type>Checkbox</type>
</CustomField>