force-app/main/default/objects/pse__Project_Gantt_Settings__c/fields/pse__Show_Points_Completion_Percent_Bar__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Points_Completion_Percent_Bar__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Determines if the points complete percentage shows in the task bar display in the Schedule pane. This setting is selected by default. This setting does not control the display of the %Pts button in the Schedule pane.</inlineHelpText>
    <label>Show Points Completion % in Task Bar</label>
    <type>Checkbox</type>
</CustomField>